[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/EngineEditor/EngineLevelEditor.gd" type="Script" id=2]
[ext_resource path="res://Scenes/EngineEditor/EditorResources/EditorFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/EngineEditor/EditorResources/EditorTheme.tres" type="Theme" id=4]

[sub_resource type="Animation" id=1]
resource_name = "leveldata"
tracks/0/type = "audio"
tracks/0/path = NodePath("scene/AnimationPlayer/AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}

[node name="EngineLevelEditor" type="Node2D"]
script = ExtResource( 2 )
song = "C:/Users/Cam/Documents/Audivarium/Objects/Bullets/Sniper/sniper_fire.wav"

[node name="editorinfo" type="Node2D" parent="."]

[node name="Label" type="Label" parent="editorinfo"]
margin_left = 16.0
margin_top = -256.0
margin_right = 1071.0
margin_bottom = -136.0
custom_fonts/font = ExtResource( 3 )
text = "
levels saved at: C:\\Users\\User\\AppData\\Roaming\\Godot\\app_userdata\\Audivarium
Audio currently only supports .ogg and .wav files
I recommend .ogg for music, and .wav for sound effects"
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="editorinfo"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TestButton" type="Button" parent="editorinfo/Control"]
margin_left = 264.0
margin_right = 464.0
margin_bottom = 54.0
text = "Test Level"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ExportButton" type="Button" parent="editorinfo/Control"]
margin_left = 528.0
margin_right = 728.0
margin_bottom = 54.0
text = "Export Level"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="editorinfo/Control"]
margin_right = 200.0
margin_bottom = 54.0
text = "Quit"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="editorinfo/Control"]
margin_left = 300.0
margin_top = 306.0
margin_right = 666.0
margin_bottom = 412.0
resizable = true
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leveldata" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="leveldata"]
anims/leveldata = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="leveldata/AnimationPlayer"]

[node name="Layer0" type="Node2D" parent="leveldata"]

[node name="PlayerSpawnPoint" type="Sprite" parent="leveldata"]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Layer1" type="Node2D" parent="leveldata"]
[connection signal="pressed" from="editorinfo/Control/TestButton" to="." method="_on_TestButton_pressed"]
[connection signal="button_down" from="editorinfo/Control/ExportButton" to="." method="_on_ExportButton_button_down"]
[connection signal="button_down" from="editorinfo/Control/QuitButton" to="." method="_on_QuitButton_button_down"]
[connection signal="confirmed" from="editorinfo/Control/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
